fix: bug paddings on small window

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -3,4 +3,5 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  margin: 0 3% 0 3%;
 }
