--- a/src/app/search-page/search-page.component.scss
+++ b/src/app/search-page/search-page.component.scss
@@ -4,7 +4,6 @@
   flex-direction: column;
   padding-top: 1em;
   overflow: hidden;
-  padding: 0 7em 0 7em;
 }
 .product-select-block {
   display: inline-block;
